test/corpus/basics.txt
==================
Simple element
==================

<div>hello</div>

---

(source_file
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

==================
Self-closing element
==================

<custom-tag/>

---

(source_file
  (self_closing_tag (tag_name)))

==================
Nested elements
==================

<div><span>text</span></div>

---

(source_file
  (element
    (start_tag (tag_name))
    (element
      (start_tag (tag_name))
      (text)
      (end_tag (tag_name)))
    (end_tag (tag_name))))

==================
Element with string attribute
==================

<div class="container">content</div>

---

(source_file
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (attribute_value (quoted_string))))
    (text)
    (end_tag (tag_name))))

==================
Element with multiple attributes
==================

<custom-input type="text" name="field" disabled/>

---

(source_file
  (self_closing_tag
    (tag_name)
    (attribute (attribute_name) (attribute_value (quoted_string)))
    (attribute (attribute_name) (attribute_value (quoted_string)))
    (attribute (attribute_name))))

==================
Empty element
==================

<div></div>

---

(source_file
  (element
    (start_tag (tag_name))
    (end_tag (tag_name))))

==================
Element with single-quoted attribute
==================

<div class='main'>text</div>

---

(source_file
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (attribute_value (quoted_string))))
    (text)
    (end_tag (tag_name))))
