test/corpus/comments.txt
==================
HTML comment
==================

<!-- This is a comment -->

---

(source_file
  (html_comment (comment_content)))

==================
Multi-line HTML comment
==================

<!--
  This is a
  multi-line comment
-->

---

(source_file
  (html_comment (comment_content)))

==================
Line comment
==================

// this is a line comment

---

(source_file
  (line_comment))

==================
Empty HTML comment
==================

<!---->

---

(source_file
  (html_comment))

==================
Block comment
==================

/* single line block comment */

---

(source_file
  (block_comment))

==================
JSDoc block comment
==================

/**
 * @typedef {Object} Input
 * @property {string} name
 */

---

(source_file
  (block_comment))
