test/corpus/scriptlets.txt
==================
Scriptlet line const
==================

$ const x = 1;

---

(source_file
  (scriptlet_line
    (js_line_expression)))

==================
Scriptlet line let
==================

$ let y = fn();

---

(source_file
  (scriptlet_line
    (js_line_expression)))

==================
Scriptlet block
==================

$ {
  const x = 1;
  const y = 2;
}

---

(source_file
  (scriptlet_block))
